Fixed the gap above the reader header that the bible text was showing through.

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -106,6 +106,7 @@
   position: fixed
   top: 72px
   z-index: 2
+  background-color: #DEDDDB
 
 #reader_header:after
   content: ''
